deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nftylandingpage-frontend-deployment
  namespace: nfty-dev
  labels:
    app: nfty-landingpage-frontend
spec:
  replicas: 2
  selector: 
    matchLabels:
      app: nfty-landingpage-frontend
  template:
    metadata:
      labels:
        app: nfty-landingpage-frontend
    spec:
      imagePullSecrets:
      - name: nfty-dockerhub
      containers:
      - name: frontend
        image: nfty/frontend-landing-page
        ports:
        - containerPort: 3001
